<resources>
    <string name="app_name">FirebaseDemo</string>
    <string name="usuarios">Usuários</string>
    <string name="clientes">Clientes</string>
    <string name="adicionar">Adicionar</string>
    <string name="cpf">CPF</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-Mail</string>
    <string name="cliente">Cliente</string>
    <string name="empresa">Empresa</string>
    <string name="cnpj">CNPJ</string>
    <string name="endereco">Endereço</string>
    <string name="empresas">Empresas</string>
    <string name="produto">Produto</string>
    <string name="codigo">Código</string>
    <string name="preco">Preço</string>
    <string name="produtos">Produtos</string>
    <string name="excluir">Excluir</string>
    <string name="salvar">Salvar</string>
    <string name="funcionario">Funcionário</string>
    <string name="funcionarios">Funcionários</string>
    <string name="pedidos">Pedidos</string>
    <string name="pedido">Pedido</string>
    <string name="adicionar_item">Adicionar Item</string>
    <string name="item_do_pedido">Item do Pedido</string>
    <string name="quantidade">Quantidade</string>
</resources>
